feat(seo): Implement SSG prerendering, update SEO configs, and Dockerfile for Coolify

--- a/index.html
+++ b/index.html
@@ -1,51 +1,61 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5D37RSW3');</script>
-    <!-- End Google Tag Manager -->
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/src/assets/jdgk-logo.png" type="image/png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JDGK Business Solutions Inc. - Results Driven, Client Focused</title>
-    <meta name="description" content="Professional business solutions and client-focused services. Results driven approach with advanced technology, proven results, exceptional service." />
-    <meta name="keywords" content="business solutions, client services, results driven, professional consulting, BPO, outsourcing" />
-    <meta name="author" content="JDGK Business Solutions Inc." />
-    <link rel="canonical" href="https://jdgkbusiness.com" />
-    
-    <!-- Geographic SEO -->
-    <meta name="geo.region" content="PH-RIZ" />
-    <meta name="geo.placename" content="Teresa, Rizal" />
-    <meta name="geo.position" content="14.542172875010287;121.22006609754878" />
-    <meta name="ICBM" content="14.542172875010287, 121.22006609754878" />
-    
-    <!-- Additional SEO -->
-    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <meta property="og:title" content="JDGK Business Solutions Inc. - Results Driven, Client Focused" />
-    <meta property="og:description" content="Professional business solutions and client-focused services. Results driven approach with proven results worldwide." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jdgkbusiness.com" />
-    <meta property="og:image" content="https://jdgkbusiness.com/og-image.jpg" />
+<head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5D37RSW3');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/src/assets/jdgk-logo.png" type="image/png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JDGK Business Solutions Inc.</title>
+  <meta name="description"
+    content="JDGK Business Solutions Inc. is a premier BPO in the Philippines specializing in Debt Collection, Customer Service, and Telemarketing. Partner with us for cost-effective, high-quality outsourcing solutions." />
+  <meta name="keywords"
+    content="Debt Collection BPO Philippines, Call Center Philippines, BPO Services, Customer Service Outsourcing, Telemarketing Philippines, Lead Generation, Virtual Assistant Services, Back Office Support" />
+  <meta name="author" content="JDGK Business Solutions Inc." />
+  <link rel="canonical" href="https://jdgkbsi.ph/" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@jdgkbusiness" />
-    <meta name="twitter:title" content="JDGK Business Solutions Inc. - Results Driven, Client Focused" />
-    <meta name="twitter:description" content="Professional business solutions and client-focused services. Results driven approach with proven results worldwide." />
-    <meta name="twitter:image" content="https://jdgkbusiness.com/twitter-image.jpg" />
-  </head>
+  <!-- Geographic SEO -->
+  <meta name="geo.region" content="PH-RIZ" />
+  <meta name="geo.placename" content="Teresa, Rizal" />
+  <meta name="geo.position" content="14.542172875010287;121.22006609754878" />
+  <meta name="ICBM" content="14.542172875010287, 121.22006609754878" />
 
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5D37RSW3"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Additional SEO -->
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+  <meta property="og:title" content="JDGK Business Solutions Inc." />
+  <meta property="og:description"
+    content="JDGK Business Solutions Inc. is a premier BPO in the Philippines specializing in Debt Collection, Customer Service, and Telemarketing. Partner with us for cost-effective, high-quality outsourcing solutions." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jdgkbsi.ph/" />
+  <meta property="og:image" content="https://jdgkbsi.ph/og-image.jpg" />
+  <meta name="google-site-verification" content="C605Nr37OBRnkG3NkP7IzCCyDP_vDzgD0-G7C-mPWPc" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@jdgkbsi" />
+  <meta name="twitter:title" content="JDGK Business Solutions Inc." />
+  <meta name="twitter:description"
+    content="JDGK Business Solutions Inc. is a premier BPO in the Philippines specializing in Debt Collection, Customer Service, and Telemarketing. Partner with us for cost-effective, high-quality outsourcing solutions." />
+  <meta name="twitter:image" content="https://jdgkbsi.ph/twitter-image.jpg" />
+</head>
+
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5D37RSW3" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
